fix container tests, make `DATA_PATH` and `UDF_PATH` env vars flexible